--- a/src/index.css
+++ b/src/index.css
@@ -22,6 +22,11 @@ body {
   -ms-overflow-style: none;  /* IE and Edge */
   scrollbar-width: none;  /* Firefox */
 }
+
+.App {
+  background-color: linear-gradient(87deg, rgba(2,0,36,1) 0%, rgba(7,71,114,1) 35%, rgba(8,162,155,1) 100%);
+
+}
 /* Hide scrollbar for Chrome, Safari and Opera */
 .summaryModal::-webkit-scrollbar {
   display: none;
